# scanopy-arborist

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/scanopy-ci/: bootstrap.sh  docker-compose.yml
.github/workflows/: ci.yml
.raiden/: README.md
.raiden/instance/: baseline.json  metadata.json
.raiden/local/: MODEL_MAP.md  README.md  ROUTING.md
.raiden/local/prompts/: ci-integration-canary-gap.md  (+1 more)
.raiden/state/: CURRENT_STATE.md  DECISIONS.md  GOALS.md  OPEN_LOOPS.md  README.md  WORK_LOG.md
.raiden/writ/: AGENTS.md  FORK_REVIEW_PROTOCOL.md  MODEL_TIERS.md  OPERATING_RULES.md  README.md  ROUTING_POLICY.md  WORKSPACE_AUDIT_PROTOCOL.md
deploy/docker/: .env.example  Dockerfile  docker-compose.yml
deploy/lxc/: README.md
deploy/podman/: README.md  arborist.container
docs/: bumping-the-scanopy-pin.md  scope-confinement-audit.md  usage-guide.md  verification-real-vm.md
src/arborist/: __init__.py  cli.py  client.py  compat.py  config.py  errors.py  redact.py  server.py
tests/integration/: conftest.py  test_binding_tools.py  test_bindings.py  test_curated_write_safety.py  test_fix_pass_live.py  test_host_resolution.py  test_profile_gating.py  test_rate_limit_live.py  test_scope_and_sentinel.py  test_secret_redaction.py  test_tag_scope_canary.py  test_tags.py  test_topology_export.py  test_version_guard.py
tests/unit/: conftest.py  test_client.py  test_compat.py  test_config.py  test_fix_pass.py  test_redact.py  test_review_fixes.py  test_scope_audit.py  test_server.py  test_transport_security.py
(+6 files in other folders)
