[project]
name = "scanopy-arborist-mcp"
version = "0.1.0"
description = "Arborist — an MCP server for Scanopy. Query your network topology from Claude and curate the user-owned overlay (names, tags, visibility) without ever touching what the scanner discovered."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arborist contributors" }]
keywords = ["mcp", "scanopy", "network", "topology", "homelab"]
dependencies = [
    "mcp>=1.27,<2",
    "httpx>=0.27",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "anyio>=4.0",
]

[project.scripts]
arborist = "arborist.cli:main"

[project.urls]
Homepage = "https://github.com/StarlightDaemon/scanopy-arborist"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arborist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that need a live disposable Scanopy instance (SCANOPY_BASE_URL/SCANOPY_API_KEY)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
